@@ -2,6 +2,7 @@
 v6.0.4-git
 ----------
 
+[mms] Improved detection of charset in text/html message parts.
 [mms] Fix displaying dynamic compose screen when sent-mail preferences are
       locked (Bug #12009).
 [mms] Fix usage of textContent property on IE8 (Bug #12012).
